# x86linuxextra

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  uninstall.sh
include/x86linux/: helper.h
module/: .gitignore  Makefile  dkms.conf  main.c  module.c  post_build.sh  post_install.sh  post_remove.sh
src/: CMakeLists.txt  bitset.c  bitwise.c  bmi.c  cache.c  log.c  spsc.c  usersched.c  usersched.h  x86linuxextra.c
